@@ -52,8 +52,13 @@ The application follows the MVC (Model-View-Controller) architecture pattern:
 
     ```bash
    mvn clean install
-   
-3. **Run the Application**
+
+3. **Set the Project Structure**
+
+     Add  --module-path JavaFX/lib Path --add-modules javafx.controls,javafx.fxml  to the VM Options in Run Configurations
+     Include JavaFX in the Project Structure Modules and Libraries
+  
+4. **Run the Application**
 
      ```bash
     mvn javafx:run
